--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+   body {
+       margin: 3%;
+   }
+
    section {
        display: flex;
    }
@@ -25,12 +29,37 @@
 
    .link-button {
        text-decoration: none;
-       text-align: center;
+       text-align: right;
        font-size: 30px;
        background-image: linear-gradient(yellow, green);
        padding: 10px, 40px;
+
    }
 
    #today {
        color: black;
+       text-align: center;
+       margin: 5%;
+   }
+
+   h2 {
+       text-align: center;
+   }
+
+   input {
+       text-align: center;
+       font-size: 20px;
+       width: 20%;
+       height: 80px;
+       margin: 18px;
+       border: 20px, cornflowerblue;
+       border-radius: 10px;
+       padding: 10px, 40px;
+       background-color: aliceblue;
+       outline: none;
+   }
+
+   h4 {
+       text-align: center;
+       font-size: 40px;
    }
