--- a/style.css
+++ b/style.css
@@ -22,9 +22,22 @@
        width: 500%;
        height: 400px;
        background-size: cover;
-       color: burlywood;
+       color: rgb(179, 119, 40);
        padding: 20px;
+       background-color: rgb(215, 138, 22);
 
+
+   }
+
+   h6 {
+
+       margin: 5px;
+       padding: 20px;
+       font-size: 60px;
+   }
+
+   #sir {
+       text-align: center;
    }
 
    .link-button {
@@ -36,30 +49,80 @@
 
    }
 
+   .flex {
+       display: flex;
+       justify-content: center;
+   }
+
    #today {
        color: black;
        text-align: center;
        margin: 5%;
    }
 
-   h2 {
-       text-align: center;
+   .felxible {
+       display: flex;
+       margin: 50px;
+
    }
 
-   input {
-       text-align: center;
-       font-size: 20px;
-       width: 20%;
-       height: 80px;
-       margin: 18px;
-       border: 20px, cornflowerblue;
-       border-radius: 10px;
-       padding: 10px, 40px;
-       background-color: aliceblue;
-       outline: none;
+   .git {
+       height: 100px;
+       width: 200px;
+       margin: 20px;
+       padding: 50px;
+       border: 10px, solid, gray;
+       box-shadow: 50px, 40px;
+       font-size: 30px;
+
+   }
+
+   .add {
+       height: 100px;
+       width: 200px;
+       margin: 20px;
+       padding: 50px;
+       border: 10px, solid, gray;
+       box-shadow: 100%;
+       font-size: 30px;
+
+   }
+
+   .bye {
+       height: 100px;
+       width: 200px;
+       margin: 20px;
+       padding: 50px;
+       border: 10px, solid, gray;
+       box-shadow: 60%;
+       font-size: 30px;
+   }
+
+   .body {
+       height: 100px;
+       width: 200px;
+       margin: 20px;
+       padding: 50px;
+       border: 10px, solid, gray;
+       box-shadow: 60%;
+       font-size: 30px;
+   }
+
+   #done {
+       display: flex;
+   }
+
+   #okey {
+
+       display: flex;
    }
 
    h4 {
        text-align: center;
        font-size: 40px;
+   }
+
+   #deploy {
+       color: black;
+       text-align: center;
    }
